# D4/app/swagger.json
@@ -20,12 +20,13 @@
     "schemes": ["http"],
     "consumes": ["application/json"],
     "produces": ["application/json"],
-    "definitions": {
+
+    "components":{
         "Task": {
             "required": ["data_inizio", "data_fine", "nome", "modulo", "completata", "userId"],
             "properties": {
-                "data_inizio": {"type": "date"},
-                "data_fine": {"type": "date"},
+                "data_inizio": {"type": "string"},
+                "data_fine": {"type": "string"},
                 "nome": {"type": "string"},
                 "modulo": {"type": "string"},
                 "completata": {"type": "boolean", "default":"false"},
@@ -53,46 +54,43 @@
         "Utente":{
             "required": ["nome", "cognome", "email", "numero_telefono", "data_nascita", "password"],
             "properties":{
-                "nome": {"type": "String"},
-                "cognome": {"type": "String"},
-                "email": {"type": "String"},
-                "numero_telefono": {"type": "String"},
-                "data_nascita": {"type": "String"},
-                "password": {"type": "String"},
-                "role":{"type": "mongoose.Schema.Types.ObjectId", "ref": "Role"}
+                "nome": {"type": "string"},
+                "cognome": {"type": "string"},
+                "email": {"type": "string"},
+                "numero_telefono": {"type": "string"},
+                "data_nascita": {"type": "string"},
+                "password": {"type": "string"},
+                "role":{"type": "string", "ref": "Role"}
             }
-        }
-    },
-    "components":{
+        },
+        "Credenziali":{
+            "required": ["nome", "cognome", "password"],
+            "properties":{
+                "nome": {"type":"string"},
+                "cognome": {"type": "string"},
+                "password": {"type": "string"}
+            }
+        },
         "securitySchemes":{
-            "bearerAuth":{
+            "BearerAuth":{
                 "type": "http",
                 "scheme": "bearer",
-                "bearerFormat":"JWT"
+                "bearerFormat": "JWT"   
             }
         }
     },
-    "security":{"bearerAuth":[]},
 
     "paths": { 
         "/task": {  
             "get": {
+                "security":[{"BearerAuth":[]}],
                 "tags": ["Lista task"],
                 "summary": "Prende tutte le task dal db",
-                "parameters":[{
-                    "in": "header",
-                    "name": "x-access-token",
-                    "schema": {
-                        "type": "string"
-                    },
-                    "stype": "simple",
-                    "description": "Token per accedere alle tasks"
-                }],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Task"
+                            "$ref": "#/components/Task"
                         }
                     },
                     "500":{
@@ -111,29 +109,20 @@
             },
 
             "post":{
+                "security":[{"BearerAuth":[]}],
                 "tags": ["Aggiunta task"],
                 "summary": "Viene aggiunta una task",
-                "parameters":[{
-                    "in": "body",
-                    "name": "task",
-                    "description": "La task da aggiungere",
-                    "schema":{
-                        "type": "object",
-                        "required": "nome",
-                        "properties":{
-                            "data_inizio": {"type": "date"},
-                            "data_fine": {"type": "date"},
-                            "nome": {"type": "string"},
-                            "modulo": {"type": "string"},
-                            "completata": {"type": "boolean"},
-                            "userId": {"type": "string"}
+                "requestBody":{
+                    "content":{
+                        "application/json":{
+                            "schema":{ "$ref": "#/components/Task"}
                         }
                     }
-                }],
+                },
                 "responses": {
                     "201":{
                         "description": "Created",
-                        "schema": {"$ref": "#/definitions/Task"}
+                        "schema": {"$ref": "#/components/Task"}
                     },
                     "401":{
                         "description": "Unauthorized"
@@ -155,6 +144,7 @@
         },
         "/task/{nome}": {
             "get": {
+                "security":[{"BearerAuth":[]}],
                 "tags": ["Seleziona task"],
                 "summary": "Ritorna la task con quel nome",
                 "parameters":[{
@@ -167,7 +157,7 @@
                 "responses":{
                     "200":{
                         "description": "OK",
-                        "schema":{ "$ref": "#/definitions/Task"}
+                        "schema":{ "$ref": "#/components/Task"}
                     },
                     "401":{
                         "description": "Unauthorized"
@@ -193,7 +183,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Modulo"
+                            "$ref": "#/components/Modulo"
                         }
                     },
                     "500":{
@@ -225,7 +215,7 @@
                 "responses":{
                     "200":{
                         "description": "OK",
-                        "schema":{ "$ref": "#/definitions/Modulo"}
+                        "schema":{ "$ref": "#/components/Modulo"}
                     },
                     "401":{
                         "description": "Unauthorized"
@@ -247,24 +237,17 @@
             "post": {
                 "tags": ["Login"],
                 "summary": "Login utente",
-                "parameters":[{
-                    "in": "body",
-                    "name": "user",
-                    "description": "credenziali",
-                    "schema":{
-                        "type": "object",
-                        "required": ["nome", "cognome", "password"],
-                        "properties":{
-                            "nome": {"type": "string"},
-                            "cognome": {"type": "string"},
-                            "password": {"type": "string"}
+                "requestBody":{
+                    "content":{
+                        "application/json":{
+                            "schema":{ "$ref": "#/components/Credenziali"}
                         }
                     }
-                }],
+                },
                 "responses": {
                     "200":{
                         "description": "OK",
-                        "schema":{ "$ref": "#/definitions/Modulo"}
+                        "schema":{ "$ref": "#/components/Utente"}
                     },
                     "401":{
                         "description": "Unauthorized"
